<resources>
    <string name="app_name">AplikasiGithubUser</string>
    <string name="user_detail">User Detail</string>
    <string name="user_setting">Setting Tema</string>
    <string name="user_favorite">User Favorite</string>
    <string name="app_logo">Logo Aplikasi</string>
    <string name="app_avatar">Gambar Avatar</string>
    <string name="app_username">Username</string>
    <string name="app_name_user">Name</string>
    <string name="app_follower">Followers</string>
    <string name="app_following">Following</string>
    <string name="app_company">Company</string>
    <string name="app_location">Location</string>
    <string name="app_repository">Repository</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="tab">Tab</string>
    <string name="tv_start">Cari User Terlebih Dahulu</string>
    <string name="img_start">Image start searching first</string>
    <string name="not_found">Not Found</string>
    <string name="search_hint">Masukkan Username Github</string>
    <string name="app_type">Type</string>
    <string name="detail_followers">%d Followers</string>
    <string name="detail_following">%d Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_user">Favorite User</string>

    <string name="title">Hapus</string>
    <string name="dialogMsg">Kamu yakin ingin Hapus ? </string>
    <string name="anda_yakin_ingin_menghapus">Anda Yakin Ingin Menghapus ?</string>

</resources>