<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting"
            app:actionViewClass="androidx.appcompat.widget.Toolbar"/>
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/favorite"
            app:actionViewClass="androidx.appcompat.widget.Toolbar"/>
    </group>
</menu>
