<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.UserDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detail_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constAppbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <ToggleButton
                    android:id="@+id/btnFavorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textOn=""
                    android:textOff=""
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@+id/constAppbar"
                    android:background="@drawable/baseline_favorite_border_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="20dp"
                    tools:ignore="KeyboardInaccessibleWidget" />

                <ToggleButton
                    android:id="@+id/btnFavoriteInvis"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textOn=""
                    android:textOff=""
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/constAppbar"
                    android:background="@drawable/baseline_favorite_red"
                    android:layout_marginEnd="10dp"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/detail_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_detail_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_avatar"
                    tools:src="@drawable/avatar_placeholder" />

                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_name_user"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progress_bar_detail"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <TextView
                    android:id="@+id/tv_detail_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_follower"
                    android:textColor="@color/white" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/app_following"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_company"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_company" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_location"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tv_detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_repository"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_repository" />

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="4dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/tab"
                app:tabIndicatorColor="@color/bg_red"
                app:tabIndicatorHeight="4dp"
                app:tabSelectedTextColor="@color/bg_red"
                app:tabTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="40dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.constraintlayout.widget.ConstraintLayout>